--- a/fluid-run-centos/cloudbuild.yaml
+++ b/fluid-run-centos/cloudbuild.yaml
@@ -7,6 +7,7 @@ steps:
         "-force",
         "-var","project_id=$PROJECT_ID",
         "-var","zone=$_ZONE",
+        "-var","compiler=$_COMPILER",
         "-var","source_image_family=${_SOURCE_IMAGE_FAMILY}",
         "-var","source_image_project=${_SOURCE_IMAGE_PROJECT}",
         "-var","subnet=${_SUBNETWORK}",
@@ -30,11 +31,12 @@ substitutions:
     _IMAGE_NAME: 'fluid-run-centos-latest'
     _IMAGE_FAMILY: 'fluid-run-centos-foss'
     _INSTALL_ROOT: '/opt'
-    _SLURM_ROOT: ''
+    _SLURM_ROOT: '/usr/local'
     _PKG_PATH: "fluid-run-centos"
     _COMMON_PATH: "common"
     _TARGET_ARCH: "x86_64"
     _ENV_FILE: "env/spack.yaml"
     _MACHINE_TYPE: "n1-standard-16"
+    _COMPILER: "gcc@4.8.5"
 
 timeout : 28800s
