--- a/rcc-ubuntu/packages.yaml
+++ b/rcc-ubuntu/packages.yaml
@@ -20,3 +20,10 @@ packages:
     externals:
     - spec: slurm@20-11
       prefix: /usr/local
+  valgrind:
+    buildable: false
+    version:
+    - 3.15.0
+    externals:
+    - spec: valgrind@3.14.0+boost~mpi+only64bit
+      prefix: /usr
