--- a/fluid-run/cloudbuild.yaml
+++ b/fluid-run/cloudbuild.yaml
@@ -8,6 +8,7 @@ steps:
         "-var","project_id=$PROJECT_ID",
         "-var","zone=$_ZONE",
         "-var","compiler=$_COMPILER",
+        "-var","system_compiler=$_SYSTEM_COMPILER",
         "-var","source_image_family=${_SOURCE_IMAGE_FAMILY}",
         "-var","source_image_project=${_SOURCE_IMAGE_PROJECT}",
         "-var","subnet=${_SUBNETWORK}",
@@ -37,6 +38,7 @@ substitutions:
     _TARGET_ARCH: "x86_64"
     _ENV_FILE: "env/spack.yaml"
     _MACHINE_TYPE: "n1-standard-16"
-    _COMPILER: "gcc@11.2.0"
+    _COMPILER: "gcc@10.3.0"
+    _SYSTEM_COMPILER: "gcc@4.8.5"
 
 timeout : 28800s
