--- a/rcc-centos/packages.yaml
+++ b/rcc-centos/packages.yaml
@@ -23,9 +23,10 @@ packages:
     - spec: libevent@2.0.21
       prefix: /usr
   libtool: 
-    buildable: true
-    version: 
-    - 2.4.6
+    buildable: false
+    externals:
+    - spec: libtool@2.4.2
+      prefix: /
   m4: 
     buildable: true
     version: 
