--- a/openfoam/env/spack.yaml
+++ b/openfoam/env/spack.yaml
@@ -6,8 +6,7 @@ spack:
   concretization: separately
 
   specs:
-  - openfoam-org@8
-  - paraview@5.9.0
+  - openfoam-org@8 +metis 
 
    
   packages:
@@ -20,7 +19,7 @@ spack:
           - openmpi
 
       target:
-      - x86_64
+      - @ARCH@
 
     autoconf:
       buildable: false
