[RCC-734] Add bzip2 to external packages
* This fix will only work for a CentOS 7 base image with bzip2 already
  installed via yum

--- a/openfoam/env/spack.yaml
+++ b/openfoam/env/spack.yaml
@@ -26,6 +26,11 @@ spack:
       externals:
       - spec: autoconf@2.69
         prefix: /usr
+    bzip2:
+      buildable: false
+      externals:
+      - spec: bzip2@1.0.6
+        prefix: /usr
     automake:
       buildable: false
       externals:
