[RCC-735] Add gettext from rcc-centos environment
* gettext package is referenced now as an external package - valid for
  CentOS 7 OS

--- a/openfoam/env/spack.yaml
+++ b/openfoam/env/spack.yaml
@@ -54,6 +54,11 @@ spack:
       buildable: true
       version: 
       - 2.6.4
+    gettext:
+      buildable: false
+      externals:
+      - spec: gettext@0.19.8.1
+        prefix: /usr
     libevent:
       buildable: false
       externals:
