--- a/rcc-centos/cloudbuild.yaml
+++ b/rcc-centos/cloudbuild.yaml
@@ -26,17 +26,17 @@ steps:
 substitutions:
     _ZONE: 'us-central1-c'
     _SUBNETWORK: 'default'
-    _SOURCE_IMAGE_FAMILY: 'schedmd-slurm-20-11-4-centos-7'
-    _SOURCE_IMAGE_PROJECT: 'schedmd-slurm-public'
+    _SOURCE_IMAGE_FAMILY: 'schedmd-slurm-20-11-7-centos-7'
+    _SOURCE_IMAGE_PROJECT: 'research-computing-cloud'
     _IMAGE_NAME: 'rcc-centos-foss-latest'
     _IMAGE_FAMILY: 'rcc-centos-foss'
     _INSTALL_ROOT: '/opt'
     _SLURM_ROOT: '/usr/local'
-    _COMPILER: 'intel-oneapi-compilers'
+    _COMPILER: ""
     _PKG_PATH: "rcc-centos"
     _COMMON_PATH: "common"
-    _TARGET_ARCH: "cascadelake"
-    _ENV_FILE: "env/spack.yaml"
+    _TARGET_ARCH: "x86_64"
+    _ENV_FILE: ""
     _MACHINE_TYPE: "n1-standard-16"
 
 timeout : 28800s
