--- a/openfoam/cloudbuild.yaml
+++ b/openfoam/cloudbuild.yaml
@@ -27,16 +27,16 @@ steps:
 substitutions:
     _ZONE: 'us-central1-c'
     _SUBNETWORK: 'default'
-    _SOURCE_IMAGE_FAMILY: 'rcc-centos-foss-v300'
+    _SOURCE_IMAGE_FAMILY: 'schedmd-slurm-20-11-7-centos-7'
     _SOURCE_IMAGE_PROJECT: 'research-computing-cloud'
     _IMAGE_NAME: 'openfoam-gcp-foss-latest'
     _IMAGE_FAMILY: 'openfoam-gcp-foss'
     _INSTALL_ROOT: '/opt'
     _SLURM_ROOT: '/usr/local'
-    _COMPILER: 'intel-oneapi-compilers'
+    _COMPILER: 'gcc@10.3.0'
     _PKG_PATH: "openfoam"
     _COMMON_PATH: "common"
-    _TARGET_ARCH: "cascadelake"
+    _TARGET_ARCH: "x86_64"
     _ENV_FILE: "env/spack.yaml"
     _MACHINE_TYPE: "n1-standard-16"
     _SYSTEM_COMPILER: "gcc@4.8.5"
