--- a/openfoam/env/spack.yaml
+++ b/openfoam/env/spack.yaml
@@ -6,14 +6,14 @@ spack:
   concretization: separately
 
   specs:
-  - openfoam-org@8 +metis 
+  - openfoam-org@8 +metis % @COMPILER@ ^findutils % @SYSTEM_COMPILER@ ^tar % @SYSTEM_COMPILER@ ^diffutils % @SYSTEM_COMPILER@
 
    
   packages:
     all:
       compiler:
       - @COMPILER@
-
+        
       providers:
         mpi:
           - openmpi
@@ -29,7 +29,7 @@ spack:
     openmpi:
       buildable: true
       version: 
-      - 4.0.5
+      - 4.1.2
       variants: +cxx +cxx_exceptions +legacylaunchers +memchecker +pmi +static+vt +wrapper-rpath fabrics=auto schedulers=slurm
     slurm:
       buildable: false
