--- a/fluid-run/env/spack.yaml
+++ b/fluid-run/env/spack.yaml
@@ -7,63 +7,21 @@ spack:
 
   specs:
   - openmpi
-  - singularity ^libtool@2.4.2
+  - singularity
    
   packages:
     all:
-      compiler:
-      - @COMPILER@
-
       providers:
         mpi:
           - openmpi
-
       target:
       - x86_64
 
-    autoconf:
-      buildable: false
-      externals:
-      - spec: autoconf@2.69
-        prefix: /usr
-    automake:
-      buildable: false
-      externals:
-      - spec: automake@1.13.4
-        prefix: /usr
-    bison:
-      buildable: false
-      externals:
-      - spec: bison@3.0.4
-        prefix: /usr
-    boost: 
-      buildable: true
-      version: 
-      - 1.68.0
     cuda:
       buildable: false
       externals:
       - spec: cuda@11.2.152
         prefix: /usr/local/cuda
-    libevent:
-      buildable: false
-      externals:
-      - spec: libevent@2.0.21
-        prefix: /usr
-    libtool: 
-      buildable: false
-      externals:
-      - spec: libtool@2.4.2
-        prefix: /
-    m4: 
-      buildable: true
-      version: 
-      - 1.4.17
-    ncurses:
-      buildable: false
-      externals:
-      - spec: ncurses@5.9
-        prefix: /usr
     openmpi:
       buildable: true
       version: 
@@ -79,11 +37,3 @@ spack:
       externals:
       - spec: slurm@20-11
         prefix: /usr/local
-    valgrind:
-      buildable: false
-      externals:
-      - spec: valgrind@3.15.0+boost~mpi+only64bit
-        prefix: /usr
-
-
-  
